k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tender-portal
  labels:
    name: tender-portal
    environment: production
